[Misc] Use Math.clamp instead of Math.min/max in S3BlobStoreConfiguration